# workflow_demo

./: README.md  pyproject.toml
.github/workflows/: pytest_automation.yml
