[tool.poetry]
name = "qa-automation"
version = "0.1.0"
description = ""
authors = ["Dmitry Skvortsov <dskvortsov@bigleaf.net>"]

[tool.poetry.dependencies]
python = "^3.10.4"
ansible = "^6.1.0"
ansible-lint = { version = "^6.1.0", extras = ["community, yamllint"] }
black = "^22.3.0"
datetime = "^4.4"
flake8 = "^4.0.1"
ipaddress = "^1.0.23"
isort = "^5.10.1"
paramiko = { version = "^2.11.0", extras = ["all"] }
poetry = "^1.1.13"
pip = "^22.1.2"
pre-commit = "^2.19.0"
pyfiglet = "^0.8"
pytest = "^7.1.2"
pytest-assume = "^2.4.3"
requests = "^2.28.0"
toml = "^0.10.2"
selenium = "^4.2.0"
virtualenv = "^20.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
